更新用户头像为随机生成的头像图片

--- a/profile.html
+++ b/profile.html
@@ -245,7 +245,7 @@
           <div class="profile-card">
             <div class="avatar-container">
               <img
-                src="https://via.placeholder.com/200x200?text=头像"
+                src="https://randomuser.me/api/portraits/men/32.jpg"
                 alt="用户头像"
                 class="avatar"
                 id="user-avatar"
