添加成绩管理页面及相关功能，包括成绩录入、统计和图表展示

--- a/index.html
+++ b/index.html
@@ -273,6 +273,15 @@
           </div>
         </div>
 
+        <div class="sidebar-item" data-href="grades.html">
+          <div class="sidebar-light"></div>
+          <div class="sidebar-icon-left"><i class="ri-bar-chart-line"></i></div>
+          <div class="sidebar-text">成绩管理</div>
+          <div class="sidebar-icon-right">
+            <i class="ri-arrow-right-s-line"></i>
+          </div>
+        </div>
+
         <div class="sidebar-item" data-href="countdown.html">
           <div class="sidebar-light"></div>
           <div class="sidebar-icon-left"><i class="ri-time-line"></i></div>
@@ -368,6 +377,20 @@
               </a>
             </div>
 
+            <!-- 成绩管理特性 -->
+            <div class="feature-card">
+              <div class="feature-icon">
+                <i class="fas fa-chart-line"></i>
+              </div>
+              <h3 class="feature-title">成绩管理</h3>
+              <p class="feature-text">
+                记录并分析你的考试和作业成绩，计算GPA和平均分，生成直观的成绩趋势图表。
+              </p>
+              <a href="grades.html" class="feature-link">
+                管理我的成绩 <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+
             <!-- 倒计时特性 -->
             <div class="feature-card">
               <div class="feature-icon">
@@ -458,6 +481,7 @@
             <ul class="footer-links">
               <li><a href="index.html">首页</a></li>
               <li><a href="schedule.html">课表</a></li>
+              <li><a href="grades.html">成绩管理</a></li>
               <li><a href="countdown.html">考试倒计时</a></li>
               <li><a href="profile.html">个人资料</a></li>
               <li><a href="settings.html">设置</a></li>
