添加成绩管理功能到侧边栏和页脚，更新相关页面链接

--- a/schedule.html
+++ b/schedule.html
@@ -370,6 +370,13 @@
         <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
       </div>
       
+      <div class="sidebar-item" data-href="grades.html">
+        <div class="sidebar-light"></div>
+        <div class="sidebar-icon-left"><i class="ri-bar-chart-line"></i></div>
+        <div class="sidebar-text">成绩管理</div>
+        <div class="sidebar-icon-right"><i class="ri-arrow-right-s-line"></i></div>
+      </div>
+      
       <div class="sidebar-item" data-href="countdown.html">
         <div class="sidebar-light"></div>
         <div class="sidebar-icon-left"><i class="ri-time-line"></i></div>
@@ -939,6 +946,7 @@
           <ul class="footer-links">
             <li><a href="index.html">首页</a></li>
             <li><a href="schedule.html">课表</a></li>
+            <li><a href="grades.html">成绩管理</a></li>
             <li><a href="countdown.html">考试倒计时</a></li>
             <li><a href="profile.html">个人资料</a></li>
             <li><a href="settings.html">设置</a></li>
