--- a/countdown.html
+++ b/countdown.html
@@ -302,6 +302,15 @@
           </div>
         </div>
 
+        <div class="sidebar-item" data-href="grades.html">
+          <div class="sidebar-light"></div>
+          <div class="sidebar-icon-left"><i class="ri-bar-chart-line"></i></div>
+          <div class="sidebar-text">成绩管理</div>
+          <div class="sidebar-icon-right">
+            <i class="ri-arrow-right-s-line"></i>
+          </div>
+        </div>
+
         <div class="sidebar-item active" data-href="countdown.html">
           <div class="sidebar-light"></div>
           <div class="sidebar-icon-left"><i class="ri-time-line"></i></div>
@@ -567,8 +576,7 @@
                 <div class="countdown-value" id="minutes-3">25</div>
                 <div class="countdown-unit-label">分</div>
               </div>
-              <div class="countdown-unit">
-                <div class="countdown-value" id="seconds-3">08</div>
+              <div class="countdown-value" id="seconds-3">08</div>
                 <div class="countdown-unit-label">秒</div>
               </div>
             </div>
@@ -672,6 +680,7 @@
             <ul class="footer-links">
               <li><a href="index.html">首页</a></li>
               <li><a href="schedule.html">课表</a></li>
+              <li><a href="grades.html">成绩管理</a></li>
               <li><a href="countdown.html">考试倒计时</a></li>
               <li><a href="profile.html">个人资料</a></li>
               <li><a href="settings.html">设置</a></li>
