--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,8 @@
     <title>设置 - 课堂助手</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
+    <!-- 添加滚动动画样式 -->
+    <link rel="stylesheet" href="css/scrollAnimation.css" />
     <!-- 使用图标库 -->
     <link
       rel="stylesheet"
@@ -327,11 +329,11 @@
 
     <!-- 主内容区 -->
     <div class="container py-4 sidebar-active">
-      <h1 class="mb-4">设置</h1>
+      <h1 class="mb-4 animate-on-scroll fade-up">设置</h1>
 
       <div class="settings-container">
         <!-- 显示设置 -->
-        <div class="settings-card">
+        <div class="settings-card animate-on-scroll fade-up">
           <div class="settings-section">
             <div class="settings-header">
               <i class="fas fa-palette"></i>
@@ -364,7 +366,7 @@
         </div>
 
         <!-- 语言设置 -->
-        <div class="settings-card">
+        <div class="settings-card animate-on-scroll fade-up delay-100">
           <div class="settings-section">
             <div class="settings-header">
               <i class="fas fa-language"></i>
@@ -397,7 +399,7 @@
         </div>
 
         <!-- 通知设置 -->
-        <div class="settings-card">
+        <div class="settings-card animate-on-scroll fade-up delay-200">
           <div class="settings-section">
             <div class="settings-header">
               <i class="fas fa-bell"></i>
@@ -443,7 +445,7 @@
         </div>
 
         <!-- 数据管理 -->
-        <div class="settings-card">
+        <div class="settings-card animate-on-scroll fade-up delay-300">
           <div class="settings-section">
             <div class="settings-header">
               <i class="fas fa-database"></i>
@@ -499,7 +501,7 @@
         </div>
 
         <!-- 关于 -->
-        <div class="settings-card">
+        <div class="settings-card animate-on-scroll fade-up delay-400">
           <div class="settings-section">
             <div class="settings-header">
               <i class="fas fa-info-circle"></i>
@@ -575,8 +577,16 @@
 
     <script src="js/main.js"></script>
     <script src="js/sidebar.js"></script>
+    <!-- 添加滚动动画脚本 -->
+    <script src="js/scrollAnimation.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
+        // 初始化滚动动画
+        initScrollAnimation(".animate-on-scroll", {
+          threshold: 0.1,
+          once: true,
+        });
+
         // 初始化主题切换开关
         const themeToggle = document.getElementById("theme-toggle");
         const currentTheme =
