--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,8 @@
     <title>个人资料 - 课堂助手</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
+    <!-- 添加页脚样式 -->
+    <link rel="stylesheet" href="css/footer.css" />
     <!-- 添加滚动动画样式 -->
     <link rel="stylesheet" href="css/scrollAnimation.css" />
     <!-- 使用图标库 -->
@@ -519,89 +521,13 @@
       </div>
     </div>
 
-    <!-- 页脚 -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-column">
-            <h3 class="footer-title">课堂助手</h3>
-            <p>你的学习管理伙伴，让学习更加高效有序。</p>
-          </div>
-          <div class="footer-column">
-            <h3 class="footer-title">快速链接</h3>
-            <ul class="footer-links">
-              <li><a href="index.html">首页</a></li>
-              <li><a href="schedule.html">课表</a></li>
-              <li><a href="grades.html">成绩管理</a></li>
-              <li><a href="countdown.html">考试倒计时</a></li>
-              <li><a href="profile.html">个人资料</a></li>
-              <li><a href="settings.html">设置</a></li>
-            </ul>
-          </div>
-          <div class="footer-column">
-            <h3 class="footer-title">联系我们</h3>
-            <ul class="footer-links">
-              <li><i class="fas fa-envelope"></i> contact@classhelper.com</li>
-              <li><i class="fas fa-phone"></i> +86 123 4567 8901</li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p>&copy; 2025 课堂助手 版权所有</p>
-        </div>
-      </div>
-    </footer>
-
-    <!-- 修改密码浮动面板 -->
-    <div class="modal" id="password-modal">
-      <div class="modal-content">
-        <div class="modal-close" id="close-password-modal">×</div>
-        <h2 class="mb-3">修改密码</h2>
-        <form id="password-form">
-          <div class="form-group">
-            <label class="form-label" for="current-password">当前密码</label>
-            <input
-              type="password"
-              class="form-control"
-              id="current-password"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="new-password">新密码</label>
-            <input
-              type="password"
-              class="form-control"
-              id="new-password"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="confirm-password">确认新密码</label>
-            <input
-              type="password"
-              class="form-control"
-              id="confirm-password"
-              required
-            />
-          </div>
-          <div class="text-center mt-4">
-            <button type="submit" class="btn">确认修改</button>
-            <button
-              type="button"
-              class="btn btn-outline"
-              style="margin-left: 0.5rem"
-              id="cancel-password"
-            >
-              取消
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
+    <!-- 页脚 - 简化为只保留容器 -->
+    <footer class="footer"></footer>
 
     <script src="js/main.js"></script>
     <script src="js/sidebar.js"></script>
+    <!-- 添加页脚脚本 -->
+    <script src="js/footer.js"></script>
     <!-- 添加滚动动画脚本 -->
     <script src="js/scrollAnimation.js"></script>
     <script>
