初步设计主题管理功能  添加基础色 且仅设置界面有效

--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/footer.css" />
     <!-- 添加滚动动画样式 -->
     <link rel="stylesheet" href="css/scrollAnimation.css" />
+    <!-- 添加主题样式 -->
+    <link rel="stylesheet" href="css/themes/themes.css" />
     <!-- 使用图标库 -->
     <link
       rel="stylesheet"
@@ -389,6 +391,32 @@
 
             <div class="settings-row">
               <div class="settings-label">
+                <div class="settings-name">主题颜色</div>
+                <div class="settings-description">选择您喜欢的配色主题</div>
+              </div>
+              <div class="settings-content">
+                <div
+                  id="theme-preview-container"
+                  class="theme-preview-container"
+                ></div>
+              </div>
+            </div>
+
+            <div class="settings-row">
+              <div class="settings-label">
+                <div class="settings-name">背景效果</div>
+                <div class="settings-description">选择背景视觉增强效果</div>
+              </div>
+              <div class="settings-content">
+                <div
+                  id="effect-preview-container"
+                  class="effect-preview-container"
+                ></div>
+              </div>
+            </div>
+
+            <div class="settings-row">
+              <div class="settings-label">
                 <div class="settings-name">字体大小</div>
                 <div class="settings-description">调整界面文字大小</div>
               </div>
@@ -587,6 +615,8 @@
     <script src="js/footer.js"></script>
     <!-- 添加滚动动画脚本 -->
     <script src="js/scrollAnimation.js"></script>
+    <!-- 添加主题管理脚本 -->
+    <script src="js/themes.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // 初始化滚动动画
@@ -597,17 +627,36 @@
 
         // 初始化主题切换开关
         const themeToggle = document.getElementById("theme-toggle");
-        const currentTheme =
-          document.body.getAttribute("data-theme") || "light";
+        const currentTheme = ThemeManager.currentTheme;
 
         // 设置初始状态
-        if (currentTheme === "dark") {
+        if (currentTheme === "dark" || currentTheme === "dark-pastel") {
           themeToggle.checked = true;
         }
 
         // 主题切换事件
         themeToggle.addEventListener("change", function () {
-          toggleTheme();
+          // 根据开关状态切换深色/浅色主题
+          if (this.checked) {
+            // 如果当前是浅色主题组，切换到对应的深色主题
+            if (ThemeManager.currentTheme === "light") {
+              ThemeManager.setTheme("dark");
+            } else if (
+              ["pastel", "mint-purple", "peach-coral", "blue-green"].includes(
+                ThemeManager.currentTheme
+              )
+            ) {
+              ThemeManager.setTheme("dark-pastel");
+            }
+          } else {
+            // 如果是深色主题，切换到对应的浅色主题
+            if (
+              ThemeManager.currentTheme === "dark" ||
+              ThemeManager.currentTheme === "dark-pastel"
+            ) {
+              ThemeManager.setTheme("light");
+            }
+          }
         });
 
         // 字体大小控制
