--- a/settings.html
+++ b/settings.html
@@ -256,6 +256,150 @@
         gap: 1rem;
         margin-top: 1.5rem;
       }
+
+      /* 小球主题切换器样式 */
+      .theme-switcher {
+        display: flex;
+        gap: 1.5rem;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 100%;
+        margin-top: 1rem;
+      }
+
+      .theme-ball {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        cursor: pointer;
+        position: relative;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
+
+      .theme-ball:hover {
+        transform: scale(1.1) translateY(-5px);
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+      }
+
+      /* 增强的选中状态效果 */
+      .theme-ball.active {
+        transform: scale(1.1);
+        animation: pulse 2s infinite;
+        box-shadow: 0 0 0 4px var(--gradient-start),
+          0 0 20px 8px rgba(var(--gradient-start-rgb), 0.3),
+          0 10px 25px rgba(0, 0, 0, 0.3);
+      }
+
+      @keyframes pulse {
+        0% {
+          box-shadow: 0 0 0 4px var(--gradient-start),
+            0 0 20px 8px rgba(var(--gradient-start-rgb), 0.3),
+            0 10px 25px rgba(0, 0, 0, 0.3);
+        }
+        50% {
+          box-shadow: 0 0 0 6px var(--gradient-start),
+            0 0 30px 12px rgba(var(--gradient-start-rgb), 0.4),
+            0 15px 35px rgba(0, 0, 0, 0.4);
+        }
+        100% {
+          box-shadow: 0 0 0 4px var(--gradient-start),
+            0 0 20px 8px rgba(var(--gradient-start-rgb), 0.3),
+            0 10px 25px rgba(0, 0, 0, 0.3);
+        }
+      }
+
+      .tooltip {
+        position: absolute;
+        bottom: -45px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 6px 10px;
+        border-radius: 6px;
+        font-size: 0.8rem;
+        opacity: 0;
+        pointer-events: none;
+        white-space: nowrap;
+        transition: opacity 0.2s;
+        z-index: 100;
+      }
+
+      .theme-ball:hover .tooltip {
+        opacity: 1;
+      }
+
+      .current-theme {
+        margin-top: 2rem;
+        padding: 0.75rem 1.5rem;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 50px;
+        font-size: 1rem;
+        font-weight: bold;
+        border: 2px solid var(--gradient-start);
+        text-align: center;
+      }
+
+      /* 主题小球颜色 */
+      .classic-blue-pink-ball {
+        background: linear-gradient(135deg, #91defe, #f9bccc);
+      }
+
+      .mint-purple-ball {
+        background: linear-gradient(135deg, #a0e8e0, #d4bbfc);
+      }
+
+      .peach-coral-ball {
+        background: linear-gradient(135deg, #ffd7e8, #ffb7c5);
+      }
+
+      .green-blue-ball {
+        background: linear-gradient(135deg, #d2e8c8, #b5d8ff);
+      }
+
+      .lavender-cream-ball {
+        background: linear-gradient(135deg, #e6c6ff, #fff2d7);
+      }
+
+      .blue-violet-ball {
+        background: linear-gradient(135deg, #b5d8ff, #d4bbfc);
+      }
+
+      .coral-mint-ball {
+        background: linear-gradient(135deg, #ffb7c5, #a0e8e0);
+      }
+
+      .sunset-ball {
+        background: linear-gradient(135deg, #f9bccc, #fff2d7);
+      }
+
+      .dark-ball {
+        background: linear-gradient(135deg, #4a7b9b, #7a4a6b);
+      }
+
+      /* 响应式调整 */
+      @media (max-width: 768px) {
+        .theme-switcher {
+          gap: 1rem;
+        }
+
+        .theme-ball {
+          width: 50px;
+          height: 50px;
+        }
+      }
+
+      @media (max-width: 576px) {
+        .theme-switcher {
+          gap: 0.8rem;
+        }
+
+        .theme-ball {
+          width: 45px;
+          height: 45px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -384,10 +528,103 @@
                 <div class="settings-description">选择您喜欢的配色主题</div>
               </div>
               <div class="settings-content">
-                <div
-                  id="theme-preview-container"
-                  class="theme-preview-container"
-                ></div>
+                <div class="theme-switcher" id="theme-switcher">
+                  <!-- 经典蓝粉渐变 -->
+                  <div
+                    class="theme-ball classic-blue-pink-ball"
+                    data-theme="classic-blue-pink"
+                  >
+                    <div class="tooltip">
+                      经典蓝粉<br />
+                      渐变: #91defe → #f9bccc
+                    </div>
+                  </div>
+
+                  <!-- 薄荷紫渐变 -->
+                  <div
+                    class="theme-ball mint-purple-ball"
+                    data-theme="mint-purple"
+                  >
+                    <div class="tooltip">
+                      薄荷紫<br />
+                      渐变: #a0e8e0 → #d4bbfc
+                    </div>
+                  </div>
+
+                  <!-- 蜜桃珊瑚渐变 -->
+                  <div
+                    class="theme-ball peach-coral-ball"
+                    data-theme="peach-coral"
+                  >
+                    <div class="tooltip">
+                      蜜桃珊瑚<br />
+                      渐变: #ffd7e8 → #ffb7c5
+                    </div>
+                  </div>
+
+                  <!-- 绿蓝渐变 -->
+                  <div
+                    class="theme-ball green-blue-ball"
+                    data-theme="green-blue"
+                  >
+                    <div class="tooltip">
+                      绿蓝渐变<br />
+                      渐变: #d2e8c8 → #b5d8ff
+                    </div>
+                  </div>
+
+                  <!-- 薰衣草奶油渐变 -->
+                  <div
+                    class="theme-ball lavender-cream-ball"
+                    data-theme="lavender-cream"
+                  >
+                    <div class="tooltip">
+                      薰衣草奶油<br />
+                      渐变: #e6c6ff → #fff2d7
+                    </div>
+                  </div>
+
+                  <!-- 蓝紫渐变 -->
+                  <div
+                    class="theme-ball blue-violet-ball"
+                    data-theme="blue-violet"
+                  >
+                    <div class="tooltip">
+                      蓝紫渐变<br />
+                      渐变: #b5d8ff → #d4bbfc
+                    </div>
+                  </div>
+
+                  <!-- 珊瑚薄荷渐变 -->
+                  <div
+                    class="theme-ball coral-mint-ball"
+                    data-theme="coral-mint"
+                  >
+                    <div class="tooltip">
+                      珊瑚薄荷<br />
+                      渐变: #ffb7c5 → #a0e8e0
+                    </div>
+                  </div>
+
+                  <!-- 夕阳渐变 -->
+                  <div class="theme-ball sunset-ball" data-theme="sunset">
+                    <div class="tooltip">
+                      夕阳渐变<br />
+                      渐变: #f9bccc → #fff2d7
+                    </div>
+                  </div>
+
+                  <!-- 深色模式 -->
+                  <div class="theme-ball dark-ball" data-theme="dark">
+                    <div class="tooltip">
+                      深色模式<br />
+                      渐变: #4a7b9b → #7a4a6b
+                    </div>
+                  </div>
+                </div>
+                <div class="current-theme" id="current-theme">
+                  当前主题: 经典蓝粉
+                </div>
               </div>
             </div>
 
