--- a/countdown.html
+++ b/countdown.html
@@ -257,103 +257,8 @@
     </style>
   </head>
   <body>
-    <!-- 侧边栏导航 -->
-    <aside class="sidebar">
-      <!-- 按钮组 -->
-      <div class="sidebar-btn">
-        <div class="sidebar-btn-item"></div>
-        <div class="sidebar-btn-item"></div>
-        <div class="sidebar-btn-item"></div>
-      </div>
-
-      <!-- 用户资料 -->
-      <div class="sidebar-profile">
-        <div class="sidebar-profile-img">
-          <img
-            src="https://randomuser.me/api/portraits/men/32.jpg"
-            alt="用户头像"
-          />
-        </div>
-        <div class="sidebar-profile-text">
-          <p>欢迎使用</p>
-          <h2>课堂助手</h2>
-        </div>
-      </div>
-
-      <div class="sidebar-line"></div>
-
-      <!-- 主菜单 -->
-      <div class="sidebar-title">
-        <p>主菜单</p>
-      </div>
-
-      <div class="sidebar-menu">
-        <div class="sidebar-item" data-href="index.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left"><i class="ri-home-line"></i></div>
-          <div class="sidebar-text">首页</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-dashboard-line"></i>
-          </div>
-        </div>
-
-        <div class="sidebar-item" data-href="schedule.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left"><i class="ri-calendar-line"></i></div>
-          <div class="sidebar-text">课表</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-arrow-right-s-line"></i>
-          </div>
-        </div>
-
-        <div class="sidebar-item" data-href="grades.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left"><i class="ri-bar-chart-line"></i></div>
-          <div class="sidebar-text">成绩管理</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-arrow-right-s-line"></i>
-          </div>
-        </div>
-
-        <div class="sidebar-item active" data-href="countdown.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left"><i class="ri-time-line"></i></div>
-          <div class="sidebar-text">考试倒计时</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-arrow-right-s-line"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="sidebar-line"></div>
-
-      <!-- 个人中心 -->
-      <div class="sidebar-title">
-        <p>个人中心</p>
-      </div>
-
-      <div class="sidebar-menu">
-        <div class="sidebar-item" data-href="profile.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left"><i class="ri-user-line"></i></div>
-          <div class="sidebar-text">个人资料</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-arrow-right-s-line"></i>
-          </div>
-        </div>
-
-        <div class="sidebar-item" data-href="settings.html">
-          <div class="sidebar-light"></div>
-          <div class="sidebar-icon-left">
-            <i class="ri-settings-3-line"></i>
-          </div>
-          <div class="sidebar-text">设置</div>
-          <div class="sidebar-icon-right">
-            <i class="ri-settings-3-line"></i>
-          </div>
-        </div>
-      </div>
-    </aside>
+    <!-- 侧边栏导航 - 只保留容器元素 -->
+    <aside class="sidebar"></aside>
 
     <!-- 移动端菜单切换按钮 -->
     <div class="sidebar-toggle">
