--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <!-- 添加页脚样式 -->
-    <link rel="stylesheet" href="css/footer.css" />
-    <!-- 添加滚动动画样式 -->
+    <link rel="stylesheet" href="css/footer.css" />    <!-- 添加滚动动画样式 -->
     <link rel="stylesheet" href="css/scrollAnimation.css" />
+    <!-- 添加主题样式 -->
+    <link rel="stylesheet" href="css/themes/themes.css" />
     <!-- 使用图标库 -->
     <link
       rel="stylesheet"
@@ -384,14 +385,14 @@
     </main>
 
     <!-- 页脚 - 简化为只保留容器 -->
-    <footer class="footer"></footer>
-
-    <script src="js/main.js"></script>
+    <footer class="footer"></footer>    <script src="js/main.js"></script>
     <script src="js/sidebar.js"></script>
     <!-- 添加页脚脚本 -->
     <script src="js/footer.js"></script>
     <!-- 添加滚动动画脚本 -->
     <script src="js/scrollAnimation.js"></script>
+    <!-- 添加主题管理脚本 -->
+    <script src="js/themes.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // 初始化滚动动画
