--- a/grades.html
+++ b/grades.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <!-- 添加页脚样式 -->
-    <link rel="stylesheet" href="css/footer.css" />    <!-- 添加滚动动画样式 -->
+    <link rel="stylesheet" href="css/footer.css" />
+    <!-- 添加滚动动画样式 -->
     <link rel="stylesheet" href="css/scrollAnimation.css" />
     <!-- 添加主题样式 -->
     <link rel="stylesheet" href="css/themes/themes.css" />
@@ -671,7 +672,8 @@
     </main>
 
     <!-- 页脚 - 简化为只保留容器 -->
-    <footer class="footer"></footer>    <script src="js/main.js"></script>
+    <footer class="footer"></footer>
+    <script src="js/main.js"></script>
     <script src="js/sidebar.js"></script>
     <!-- 添加页脚脚本 -->
     <script src="js/footer.js"></script>
