丰富“成绩管理”页面

--- a/grades.html
+++ b/grades.html
@@ -311,23 +311,30 @@
       <div class="container">
         <!-- 成绩总览 -->
         <section class="grades-section">
-          <h2 class="section-title animate-on-scroll fade-up">成绩概览</h2>
-          <div class="grades-summary">
+          <h2 class="section-title animate-on-scroll fade-up">成绩概览</h2>          <div class="grades-summary">
             <div class="summary-item animate-on-scroll fade-up">
-              <div class="summary-value" id="gpa-value">3.8</div>
+              <div class="summary-value" id="gpa-value">3.6</div>
               <div class="summary-label">总GPA</div>
             </div>
             <div class="summary-item animate-on-scroll fade-up delay-100">
-              <div class="summary-value" id="avg-score">92</div>
+              <div class="summary-value" id="avg-score">86.5</div>
               <div class="summary-label">平均分</div>
             </div>
             <div class="summary-item animate-on-scroll fade-up delay-200">
-              <div class="summary-value" id="total-courses">8</div>
+              <div class="summary-value" id="total-courses">12</div>
               <div class="summary-label">课程数量</div>
             </div>
             <div class="summary-item animate-on-scroll fade-up delay-300">
               <div class="summary-value" id="highest-score">98</div>
               <div class="summary-label">最高分</div>
+            </div>
+            <div class="summary-item animate-on-scroll fade-up delay-400">
+              <div class="summary-value" id="lowest-score">58</div>
+              <div class="summary-label">最低分</div>
+            </div>
+            <div class="summary-item animate-on-scroll fade-up delay-500">
+              <div class="summary-value" id="total-credit">40</div>
+              <div class="summary-label">总学分</div>
             </div>
           </div>
         </section>
@@ -590,6 +597,118 @@
                     </button>
                   </td>
                 </tr>
+                <tr>
+                  <td>操作系统</td>
+                  <td>课堂测验</td>
+                  <td>2023-2024 第二学期</td>
+                  <td><span class="score-badge score-average">73</span></td>
+                  <td>4</td>
+                  <td>2024-04-15</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>计算机网络</td>
+                  <td>作业</td>
+                  <td>2024-2025 第一学期</td>
+                  <td><span class="score-badge score-average">76</span></td>
+                  <td>3</td>
+                  <td>2024-10-22</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>线性代数</td>
+                  <td>期末考试</td>
+                  <td>2023-2024 第一学期</td>
+                  <td><span class="score-badge score-good">85</span></td>
+                  <td>3</td>
+                  <td>2023-12-28</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>软件工程</td>
+                  <td>项目</td>
+                  <td>2023-2024 第二学期</td>
+                  <td><span class="score-badge score-excellent">96</span></td>
+                  <td>5</td>
+                  <td>2024-05-20</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>概率统计</td>
+                  <td>期中考试</td>
+                  <td>2023-2024 第一学期</td>
+                  <td><span class="score-badge score-poor">58</span></td>
+                  <td>3</td>
+                  <td>2023-11-12</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>人工智能导论</td>
+                  <td>期末项目</td>
+                  <td>2023-2024 第二学期</td>
+                  <td><span class="score-badge score-excellent">93</span></td>
+                  <td>4</td>
+                  <td>2024-06-12</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>计算机图形学</td>
+                  <td>作业</td>
+                  <td>2024-2025 第一学期</td>
+                  <td><span class="score-badge score-good">89</span></td>
+                  <td>3</td>
+                  <td>2024-09-28</td>
+                  <td>
+                    <button class="btn-icon">
+                      <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="btn-icon text-danger">
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -600,7 +719,7 @@
           <h2 class="section-title animate-on-scroll fade-up">GPA计算器</h2>
           <div class="grades-card animate-on-scroll fade-up delay-100">
             <p>根据成绩自动计算GPA，支持不同计算方法。</p>
-            <div style="margin: 1.5rem 0">
+            <div style="margin: 1.5rem 0"></div>
               <label for="gpaSystem" style="margin-right: 1rem"
                 >GPA计算标准:</label
               >
@@ -782,19 +901,17 @@
           renderTrendChart();
           renderSubjectChart();
           renderCompareChart();
-        }
-
-        // 趋势图表
+        }        // 趋势图表
         function renderTrendChart() {
           const ctx = document.getElementById("trendChart").getContext("2d");
 
-          // 假设的历史数据
+          // 更详细的历史数据
           const data = {
-            labels: ["2023-1", "2023-2", "2024-1", "2024-2"],
+            labels: ["2022-2", "2023-1", "2023-2", "2024-1", "2024-2"],
             datasets: [
               {
                 label: "GPA趋势",
-                data: [3.4, 3.6, 3.8, 3.9],
+                data: [3.2, 3.4, 3.6, 3.7, 3.85],
                 borderColor: "#4285F4",
                 backgroundColor: "rgba(66, 133, 244, 0.1)",
                 borderWidth: 2,
@@ -803,12 +920,23 @@
               },
               {
                 label: "平均分",
-                data: [83, 87, 90, 92],
+                data: [78, 83, 87, 88, 92],
                 borderColor: "#0F9D58",
                 backgroundColor: "rgba(15, 157, 88, 0.1)",
                 borderWidth: 2,
                 fill: true,
                 tension: 0.4,
+              },
+              {
+                label: "课程数量",
+                data: [4, 5, 7, 8, 12],
+                borderColor: "#DB4437",
+                backgroundColor: "rgba(219, 68, 55, 0.1)",
+                borderWidth: 2,
+                fill: false,
+                tension: 0.2,
+                borderDash: [5, 5],
+                yAxisID: 'y1',
               },
             ],
           };
@@ -831,9 +959,7 @@
               },
             },
           });
-        }
-
-        // 科目分布图
+        }        // 科目分布图
         function renderSubjectChart() {
           const ctx = document.getElementById("subjectChart").getContext("2d");
 
@@ -844,16 +970,26 @@
               "大学物理",
               "大学英语",
               "数据库原理",
+              "操作系统",
+              "计算机网络",
+              "线性代数",
+              "软件工程",
+              "人工智能导论"
             ],
             datasets: [
               {
-                data: [92, 98, 78, 88, 95],
+                data: [92, 98, 78, 88, 95, 73, 76, 85, 96, 93],
                 backgroundColor: [
                   "rgba(66, 133, 244, 0.7)",
                   "rgba(15, 157, 88, 0.7)",
                   "rgba(244, 160, 0, 0.7)",
                   "rgba(219, 68, 55, 0.7)",
                   "rgba(162, 63, 173, 0.7)",
+                  "rgba(83, 109, 254, 0.7)",
+                  "rgba(255, 138, 101, 0.7)",
+                  "rgba(46, 204, 113, 0.7)",
+                  "rgba(155, 89, 182, 0.7)",
+                  "rgba(26, 188, 156, 0.7)",
                 ],
                 borderWidth: 1,
               },
@@ -877,9 +1013,7 @@
               },
             },
           });
-        }
-
-        // 比较图表
+        }        // 比较图表
         function renderCompareChart() {
           const ctx = document.getElementById("compareChart").getContext("2d");
 
@@ -890,18 +1024,32 @@
               "大学物理",
               "大学英语",
               "数据库原理",
+              "操作系统",
+              "计算机网络",
+              "线性代数",
+              "软件工程",
+              "人工智能导论",
+              "概率统计",
+              "计算机图形学"
             ],
             datasets: [
               {
                 label: "你的分数",
-                data: [92, 98, 78, 88, 95],
+                data: [92, 98, 78, 88, 95, 73, 76, 85, 96, 93, 58, 89],
                 backgroundColor: "rgba(66, 133, 244, 0.7)",
               },
               {
                 label: "班级平均",
-                data: [86, 85, 83, 90, 87],
+                data: [86, 85, 83, 90, 87, 79, 82, 80, 88, 84, 76, 85],
                 backgroundColor: "rgba(244, 160, 0, 0.7)",
               },
+              {
+                label: "历史最高分",
+                data: [98, 100, 95, 97, 99, 96, 94, 97, 100, 98, 93, 96],
+                backgroundColor: "rgba(15, 157, 88, 0.7)",
+                borderWidth: 1,
+                type: 'line',
+              }
             ],
           };
 
